added swagger templates and moved swagger yaml to version 2.0
