# core_services/category_service/src/main/resources/api.yaml
@@ -1,4 +1,4 @@
-openapi: 3.0.0
+swagger: '2.0'
 info:
   description: category service
   version: "1.0.0-oas3"
@@ -19,16 +19,16 @@ paths:
       summary: retrieves all categories
       operationId: getCategories
       description: get all categories
+      produces:
+        - application/json
       responses:
-        '200':
+        200:
           description: get all categories
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Category'
-        '400':
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/Category'
+        400:
           description: bad input parameter
     post:
       tags:
@@ -36,41 +36,59 @@ paths:
       summary: adds an category
       operationId: addCategory
       description: Adds an category to the system
+      consumes:
+        - application/json
+      produces:
+        - application/json
+      parameters:
+        - in: body
+          name: category
+          description: category item to add
+          schema:
+            $ref: '#/definitions/Category'
       responses:
-        '201':
+        201:
           description: category created
-        '400':
-          description: 'invalid input, object invalid'
-        '409':
+        400:
+          description: invalid input, object invalid
+        409:
           description: an existing category already exists
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/Category'
-        description: category item to add
     delete:
       tags:
         - category
       summary: deletes a category
       operationId: deleteCategory
       description: deletes an category from the system
+      consumes:
+        - application/json
+      produces:
+        - application/json
+      parameters:
+        - in: body
+          name: categoryid
+          description: category to delete
+          schema:
+            type: integer
       responses:
-        '201':
+        201:
           description: category deleted
-        '400':
-          description: 'invalid input, object invalid'
- 
-components:
-  schemas:
-    Category:
-      required:
-        - name
-        - id
-      properties:
-        name:
-          type: string
-          example: Pets
-        id:
-          type: integer
-          example: 0
+        400:
+          description: invalid input, object invalid
+definitions:
+
+  Category:
+    required:
+      - name
+      - id
+    properties:
+      name:
+        type: string
+        example: Pets
+      id:
+        type: integer
+        example:  0
+
+host: virtserver.swaggerhub.com
+basePath: /anon767/HsKA/1.0.0
+schemes:
+  - https
